--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,11 @@
     <meta name="google-site-verification" content="xBT4GhYoi5qRD5tr338pgPM5OWHHIDR6mNg1a3euekI" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="description" content="{{ site.description }}">
-    <meta name="keywords"  content="{{ site.keyword }}">
+    <meta name="keywords"  content="{{ page.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     
     <!-- Open Graph -->
-    <meta property="og:title" content="{% if page.title %}{{ site.SEOTitle }} - {{ page.title }}{% else %}{{ site.SEOTitle }}{% endif %}">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.SEOTitle }}{% endif %}">
     {% case page.layout %}
     {% when 'post' %}
     <meta property="og:type" content="article">
